updated content descriptions, fixed alignments

--- a/src/app/COMPONENTS/header/header.component.scss
+++ b/src/app/COMPONENTS/header/header.component.scss
@@ -7,7 +7,7 @@
       padding-right: 10px;
   }
 
-  .welcome:hover {
+  .logo:hover {
     cursor: pointer;
   }
 
